invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_17.src
.IPPcode24
MUL int@49